# RINA-thesis

./: .clang-format  .clang-tidy  .cproject  .gitignore  .gitmodules  .oppbuildspec  .project  CMakeLists.txt  Makefile  README.md  makemakefiles  simulate.sh
policies/: CMakeLists.txt  makefrag
policies/DIF/FA/MultilevelQoS/QoSIdComparer/: QoSIdComparer.cc
policies/DIF/FA/MultilevelQoS/QoSMinComparer/: QoSMinComparer.cc
policies/DIF/FA/NewFlowRequest/: NewFlowRequestBase.cc
policies/DIF/RA/PDUFG/BiDomainGenerator/: BiDomainGenerator.cc  BiDomainGenerator.h
policies/DIF/RA/PDUFG/IQoSAwareMEntries/: IQoSAwareMEntries.cc
policies/DIF/RA/PDUFG/LatGenerator/: LatGenerator.cc
policies/DIF/RA/PDUFG/LatencySingle1Entry/: LatencySingle1Entry.cc
policies/DIF/RA/PDUFG/LatencySingleMEntries/: LatencySingleMEntries.cc
policies/DIF/RA/PDUFG/OFStaticGenerator/: OFStaticGenerator.cc
policies/DIF/RA/PDUFG/PLQoSAwareMEntries/: PLQoSAwareMEntries.cc
policies/DIF/RA/PDUFG/QoSAwareMEntries/: QoSAwareMEntries.cc
policies/DIF/RA/PDUFG/SimpleLatOrHopMEntries/: SimpleLatOrHopMEntries.cc
policies/DIF/RA/PDUFG/StaticGenerator/: StaticGenerator.cc
policies/DIF/RA/QueueAlloc/QueuePerNQoSxPLen/: QueuePerNQoSxPLen.cc
policies/DIF/RA/QueueIDGen/IDPerNQoSxPLen/: IDPerNQoSxPLen.cc
policies/DIF/RMT/Monitor/IterativeStopMonitor/: IterativeStopMonitor.cc  IterativeStopMonitor.ned
policies/DIF/RMT/Monitor/ModularMonitor/: ModularMonitor.cc
policies/DIF/RMT/Monitor/PortsLoadMonitor/: PortsLoadMonitor.cc
policies/DIF/RMT/Monitor/TKMonitor/: TKMonitor.cc
policies/DIF/RMT/PDUForwarding/: IntBbPDUForwarding.h
policies/DIF/RMT/PDUForwarding/GREFWD/: GREFWD.cc
policies/DIF/RMT/Scheduler/: RMTSchedulingBase.cc
policies/DIF/Routing/CentralRouting/: RoutingManager.cc
policies/DIF/Routing/DCRouting/: IntDCRouting.cc
policies/DIF/Routing/TDomainRouting/: TDomainRouting.h
src/: CMakeLists.txt  makefrag
src/Addons/Actions/FailureSimulation/: FailureSimulation.cc
src/Addons/Channels/EthChannel/: EthChannel.cc
src/Addons/DataInjectors/FlowsSimulation/: Inj_t.cc
src/Addons/DataInjectors/ReachabilityTest/: ReachabilityTest.cc
src/CS/: Host1APShim.ned  Host2APShim.ned
src/CS/EthShim/: Host1AP2Shim.ned  Host1APShim.ned  InteriorRouter2IntShim.ned
src/Common/: APN.cc  APN.h  APNamingInfo.cc  APNamingInfo.h  Address.cc  Address.h  ConnectionId.cc  ConnectionId.h  DAP.cc  DAP.h  ExternConsts.cc  ExternConsts.h  Flow.cc  Flow.h  PDU.cc  PDU.h  PDU.msg  Policy.h  QoSCube.cc  QoSCube.h  QoSReq.cc  QoSReq.h  SDU.cc  SDU.h  SDU.msg  Socket.cc  Utils.cc  Utils.h
src/DAF/AE/: AE.cc  AE.h  AEListeners.cc
src/DAF/AE/AEMonitor/: AEMonitor.cc
src/DAF/AEManagement/: AEMgmt.cc  AEMgmt.h  AEMgmtBase.cc  AEMgmtListeners.cc
src/DAF/AP/: AP.cc  AP.h  APBase.h  APListeners.cc
src/DAF/AP/APPing/: APPing.cc
src/DAF/AP/APStream/: APStream.cc
src/DAF/CDAP/: AuthListeners.cc  CACE.cc  CACE.h  CDAP.cc  CDAP.h  CDAPListeners.cc  CDAPMessage.msg  CDAPMsgLog.cc  CDAPMsgLog.h  CDAPMsgLogEntry.cc  CDAPMsgLogEntry.h  CDAPSplitter.cc
src/DAF/DA/: DA.cc  DA.h  Directory.cc  Directory.h  DirectoryEntry.cc  DirectoryEntry.h  NamingInformation.cc  NamingInformationEntry.cc  NamingInformationEntry.h  NeighborTable.cc  NeighborTable.h  NeighborTableEntry.cc  NeighborTableEntry.h  SearchTable.cc  SearchTableEntry.cc  SearchTableEntry.h
src/DAF/Enrollment/: CACEGeneric.cc  CACEMgmt.cc  DAFEnrollment.cc  DAFEnrollment.h  DAFEnrollmentListeners.cc  DAFEnrollmentNotifier.cc  DAFEnrollmentNotifier.h  DAFEnrollmentNotifierListeners.cc  DAFEnrollmentStateTable.cc  DAFEnrollmentStateTableEntry.cc  DAFEnrollmentStateTableEntry.h
src/DAF/IRM/: ConnectionTable.cc  ConnectionTable.h  ConnectionTableEntry.cc  ConnectionTableEntry.h  IRM.cc  IRM.h  IRMListeners.cc  IRMListeners.h
src/DAF/RIB/: DAFRIBd.cc  DAFRIBd.h  DAFRIBdBase.cc  DAFRIBdListeners.cc
src/DIF/: IPCProcess.ned
src/DIF/Delimiting/: Data.h  Delimiting.cc  UserDataField.h  UserDataField.msg
src/DIF/EFCP/: EFCP.cc  EFCP.h  EFCPInstance.cc  EFCPInstance.h  EFCPListeners.cc  EFCPPolicySet.cc  EFCPPolicySet.h  ManagementPDU.msg  MockEFCPI.cc  MockEFCPI.h
src/DIF/EFCP/DTCP/: ControlPDU.msg  DTCP.cc  DTCP.h  DTCPState.cc  DTCPState.h  DTCPTimers.msg
src/DIF/EFCP/DTP/: DTP.cc  DTPState.cc  DTPTimers.msg  DataTransferPDU.cc  DataTransferPDU.h  DataTransferPDU.msg
src/DIF/EFCP/EFCPTable/: EFCPTable.cc  EFCPTable.h  EFCPTableEntry.cc  EFCPTableEntry.h
src/DIF/Enrollment/: Enrollment.cc  Enrollment.h  EnrollmentListeners.cc  EnrollmentListeners.h  EnrollmentNotifier.cc  EnrollmentNotifier.h  EnrollmentNotifierListeners.cc  EnrollmentNotifierListeners.h  EnrollmentStateTable.cc  EnrollmentStateTableEntry.cc  EnrollmentStateTableEntry.h
src/DIF/FA/: FA.cc  FA.h  FABase.cc  FABase.h  FAI.cc  FAI.h  FAIBase.cc  FAIBase.h  FAIListeners.cc  FAListeners.cc  FAListeners.h  FANotifier.cc  FANotifier.h  FANotifierListeners.cc  NFlowTable.cc  NFlowTable.h  NFlowTableEntry.cc  NFlowTableEntry.h
src/DIF/RA/: NM1FlowTable.cc  NM1FlowTableItem.cc  NM1FlowTableItem.h  RA.cc  RA.h  RABase.cc  RABase.h  RAListeners.cc
src/DIF/RA/PDUFG/: IntPDUFG.cc  IntPDUFG.h  PDUFGNeighbor.cc  PDUFGNeighbor.h
src/DIF/RIB/: RIBd.cc  RIBd.h  RIBdBase.cc  RIBdListeners.cc  RIBdSplitter.cc  RIBdSplitter.h
src/DIF/RMT/: RMT.cc  RMT.h  RMTQueue.cc  RMTQueue.h
src/DIF/Routing/: IntRouting.cc  IntRouting.h  RoutingNotifier.cc  RoutingNotifier.h  RoutingNotifierListeners.cc
src/EthShimDIF/: EthShim.cc  EthShim.h  EthShim.ned  IPCProcessShim.ned  RINArp.cc  RINArp.h  RINArp.ned  RINArpPacket.msg  ShimFA.cc  ShimFA.h  ShimFA.ned  ShimFAI.cc  ShimFAI.h  ShimFAI.ned  ShimFlowAllocator.ned
src/EthShimDIF/EthShim/: EthShim.cc  EthShim.h  EthShim.ned
src/EthShimDIF/RINArp/: RINArp.cc  RINArp.h  RINArp.ned  RINArpPacket.msg
src/EthShimDIF/ShimFA/: ShimFA.cc  ShimFA.h  ShimFA.ned  ShimFAI.cc  ShimFAI.h  ShimFAI.ned  ShimFAListeners.cc  ShimFAListeners.h  ShimFlowAllocator.ned
src/EthShimDIF/ShimRA/: ShimRA.cc  ShimRA.h  ShimRA.ned  ShimResourceAllocator.ned
(+98 files in other folders)
